@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - remove lib->test and lib->runtime as they are redundent
 
 0.03      2019-02-14 15:51:50 -0500
   - Mac OS X specific linker fixes
